--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My URL Shortner</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <nav>
@@ -43,7 +43,7 @@
             </p>
             <a href="#">Get Started</a>
         </div>
-        <img src="/images/illustration-working.svg" alt="" data-aos="fade-right">
+        <img src="./images/illustration-working.svg" alt="" data-aos="fade-right">
     </section>
 
     <div class="underlay">
@@ -76,21 +76,21 @@
                 </div>
                 <div class="advancedStatsBoxes">
                     <div data-aos="fade-down" data-aos-delay="100">
-                        <img src="/images/icon-brand-recognition.svg" alt="">
+                        <img src="./images/icon-brand-recognition.svg" alt="">
                         <h3>Brand recognition</h3>
                         <p>
                             Brand Recognition Boost your brand recognition with each click. Generic links don’t mean a thing. Branded links help instil confidence in your content.
                         </p>
                     </div>
                     <div data-aos="fade-down" data-aos-delay="200">
-                        <img src="/images/icon-detailed-records.svg" alt="">
+                        <img src="./images/icon-detailed-records.svg" alt="">
                         <h3>Detailed Records</h3>
                         <p>
                             Gain insights into who is clicking your links. Knowing when and where people engage with your content helps inform better decisions.
                         </p>
                     </div>
                     <div data-aos="fade-down" data-aos-delay="300">
-                        <img src="/images/icon-fully-customizable.svg" alt="">
+                        <img src="./images/icon-fully-customizable.svg" alt="">
                         <h3>Fully Customizable</h3>
                         <p>
                             Improve brand awareness and content discoverability through customizable links, supercharging audience engagement.
@@ -133,7 +133,7 @@
                     <a href="https://wa.me/+2347040678029" target="_blank">
                         <i class="ri-whatsapp-fill"></i>
                     </a>
-                    <a href="https://github.com/franklin-raph" target="_blank">
+                    <a href="https://github.com/sparrowthedev" target="_blank">
                         <i class="ri-github-fill"></i>
                     </a>
                 </div>
@@ -146,6 +146,6 @@
     </section>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
