--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="/images/fav.png" type="image/x-icon">
 </head>
 <body>
     <nav>
        <div>
-            <a href="#" class="logo">Shortly</a>
+            <a href="#" class="logo">
+                <div class="logo"><img src="/images/fav.png" alt="logo" class="logo-img"></div>
+            </a>
             
             <div class="navlinks">
                 <a href="#">Features</a>
